samples/_failures_safe/1761086057_0b4e27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91c14e95.c: In function ‘main’:
./samples/SAFE/__tmp_91c14e95.c:167:9: error: expected declaration or statement at end of input
  167 |         i++;
      |         ^
./samples/SAFE/__tmp_91c14e95.c:167:9: error: expected declaration or statement at end of input
